--- a/index.html
+++ b/index.html
@@ -844,6 +844,7 @@ document.addEventListener("DOMContentLoaded", async function() {
         function createArticleElement(article, addBorderColor = false) {
             const articleElement = document.createElement('article');
             articleElement.className = 'small-article left';
+            articleElement.style.marginBottom = '20px'; // Augmente l'espacement entre les articles
 
             // Remplissage de la barre de pourcentage politique
             const randomRed = Math.floor(Math.random() * 40 + 10);
@@ -905,13 +906,16 @@ document.addEventListener("DOMContentLoaded", async function() {
             // Conteneur pour les articles rotatifs au centre
             const rotativeContainer = document.createElement('div');
             rotativeContainer.className = 'rotative-container';
-            rotativeContainer.style.margin = '0 auto';
+            rotativeContainer.style.margin = '0 auto 20px auto';
             rotativeContainer.style.padding = '20px';
             rotativeContainer.style.maxWidth = '800px';
+            rotativeContainer.style.border = '1px solid #e5e7eb';
+            rotativeContainer.style.borderRadius = '8px';
 
             organizedArticles.middleColumn.forEach((article, index) => {
                 const articleElement = document.createElement('article');
                 articleElement.className = index === 0 ? 'single-article active' : 'single-article'; // Le premier article est actif au chargement
+                articleElement.style.marginBottom = '20px';
                 articleElement.innerHTML = `
                     <figure>
                         <img src="${article.image_url || 'https://placehold.co/800x400'}" alt="${article.title}" style="width: 100%; height: 400px; object-fit: cover;" />
@@ -965,6 +969,7 @@ document.addEventListener("DOMContentLoaded", async function() {
         if (organizedArticles.rightColumn) {
             organizedArticles.rightColumn.forEach((article) => {
                 const articleElement = createArticleElement(article);
+                articleElement.style.marginBottom = '20px'; // Espacement supplémentaire
                 rightColumn.appendChild(articleElement);
             });
         }
