--- a/index.html
+++ b/index.html
@@ -844,14 +844,14 @@ document.addEventListener("DOMContentLoaded", async function() {
         function createArticleElement(article, addBorderColor = false) {
             const articleElement = document.createElement('article');
             articleElement.className = 'small-article left';
-            articleElement.style.marginBottom = '20px'; // Augmente l'espacement entre les articles
+            articleElement.style.marginBottom = '30px'; // Augmente l'espacement entre les articles
 
-            // Remplissage de la barre de pourcentage politique
+            // Définir les valeurs pourcentage pour rouge, blanc et bleu
             const randomRed = Math.floor(Math.random() * 40 + 10);
             const randomWhite = Math.floor(Math.random() * (50 - randomRed));
             const randomBlue = 100 - randomRed - randomWhite;
 
-            // Générer la barre de pourcentage sans texte pour les petites valeurs
+            // Générer la barre de pourcentage
             const politicalBarHTML = `
                 <div class="political-bar mb-8">
                     <div class="section red" style="width: ${randomRed}%;">
@@ -903,7 +903,7 @@ document.addEventListener("DOMContentLoaded", async function() {
 
         // Ajout d'un article unique dans la colonne du milieu pour rotation
         if (organizedArticles.middleColumn) {
-            // Conteneur pour l'article rotatif au centre
+            // Conteneur pour l'article rotatif
             const rotativeWrapper = document.createElement('div');
             rotativeWrapper.className = 'rotative-wrapper';
             rotativeWrapper.style.margin = '0 auto 30px auto';
@@ -913,57 +913,55 @@ document.addEventListener("DOMContentLoaded", async function() {
             rotativeWrapper.style.borderRadius = '8px';
             rotativeWrapper.style.backgroundColor = '#111827';
 
-            organizedArticles.middleColumn.forEach((article, index) => {
-                const articleElement = document.createElement('article');
-                articleElement.className = index === 0 ? 'single-article active' : 'single-article'; // Le premier article est actif au chargement
-                articleElement.style.marginBottom = '20px';
-                articleElement.innerHTML = `
-                    <figure>
-                        <img src="${article.image_url || 'https://placehold.co/800x400'}" alt="${article.title}" style="width: 100%; height: 400px; object-fit: cover;" />
-                    </figure>
-                    <h2 class="article-title article-title--large">
-                        <a href="${article.url || '#'}">${article.title}</a>
-                    </h2>
-                    <div class="political-bar mb-8">
-                        <div class="section red" style="width: 30%;">
-                            <span>30%</span>
-                        </div>
-                        <div class="section white" style="width: 50%;">
-                            <span>C 50%</span>
-                        </div>
-                        <div class="section blue" style="width: 20%;">
-                            <span>D 20%</span>
+            const articleElement = document.createElement('article');
+            articleElement.className = 'single-article active'; // L'article rotatif actif au chargement
+            articleElement.style.marginBottom = '20px';
+            const article = organizedArticles.middleColumn[0];
+            articleElement.innerHTML = `
+                <figure>
+                    <img src="${article.image_url || 'https://placehold.co/800x400'}" alt="${article.title}" style="width: 100%; height: 400px; object-fit: cover;" />
+                </figure>
+                <h2 class="article-title article-title--large">
+                    <a href="${article.url || '#'}">${article.title}</a>
+                </h2>
+                <div class="political-bar mb-8">
+                    <div class="section red" style="width: 30%;">
+                        <span>30%</span>
+                    </div>
+                    <div class="section white" style="width: 50%;">
+                        <span>C 50%</span>
+                    </div>
+                    <div class="section blue" style="width: 20%;">
+                        <span>D 20%</span>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="text">
+                        <div class="article-excerpt">
+                            <p>${article.description || ''}</p>
                         </div>
                     </div>
-                    <div class="content">
-                        <div class="text">
-                            <div class="article-excerpt">
-                                <p>${article.description || ''}</p>
-                            </div>
-                        </div>
-                    </div>
-                `;
-                rotativeWrapper.appendChild(articleElement);
-            });
-
+                </div>
+            `;
+            rotativeWrapper.appendChild(articleElement);
             middleColumn.appendChild(rotativeWrapper);
 
-            // Ajout de la section d'articles deux par deux en dessous du rotatif
-            const smallArticlesGrid = document.createElement('div');
-            smallArticlesGrid.className = 'small-articles-grid';
-            smallArticlesGrid.style.display = 'grid';
-            smallArticlesGrid.style.gridTemplateColumns = 'repeat(2, 1fr)';
-            smallArticlesGrid.style.gap = '20px';
-            smallArticlesGrid.style.marginTop = '30px';
+            // Section des articles deux par deux sous l'article rotatif
+            if (organizedArticles.middleColumn.length > 1) {
+                const smallArticlesGrid = document.createElement('div');
+                smallArticlesGrid.className = 'small-articles-grid';
+                smallArticlesGrid.style.display = 'grid';
+                smallArticlesGrid.style.gridTemplateColumns = 'repeat(2, 1fr)';
+                smallArticlesGrid.style.gap = '20px';
+                smallArticlesGrid.style.marginTop = '20px';
 
-            if (organizedArticles.middleColumn.length > 2) {
-                organizedArticles.middleColumn.slice(2).forEach((article) => {
+                organizedArticles.middleColumn.slice(1).forEach((article) => {
                     const articleElement = createArticleElement(article);
                     smallArticlesGrid.appendChild(articleElement);
                 });
-            }
 
-            middleColumn.appendChild(smallArticlesGrid);
+                middleColumn.appendChild(smallArticlesGrid);
+            }
         }
 
         // Ajout des articles dans la colonne de droite (sans bordure)
